--- a/css/layout.css
+++ b/css/layout.css
@@ -157,9 +157,11 @@ nav a:hover {
     right: 0;
     bottom: 5px;
     padding: 3px;
+    vertical-align: middle;
 }
 
-.header_search input {
+.header_search form {
+    display: inline-block;
     padding: 3px;
 }
 
